fix overflow scrolling for slides

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,13 @@
 
+body {
+  font-family: 'PT Sans', sans-serif;
+}
 
 .bg {
   background-color: rgba(0, 0, 0, 0.8);
+  overflow-y: scroll;
+  min-height: 100vh;
+  max-height: 100%;
 }
 
 body {
